--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,30 +1,21 @@
 
 
-/* Modal */
+/* Modal*/
 .cart_modal {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    animation: fadeIn linear 0.1s;
+    display: flex;    
 }
   
-.cart_overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-  
-}
+.cart_img {
+    background-image: url(https://c8.alamy.com/comp/2FK71W5/fun-cartoon-fashion-hipster-cut-pineapple-person-character-mascot-with-shopping-cart-trolley-on-a-white-background-3d-rendering-2FK71W5.jpg);
+    width: 40%;
+    background-size: 590px;
+} 
+
 
 .cart_main {
-    height: 530px;
-    width: 600px;
-    background-color: #eee0e0;
-    margin: auto;
-    position: relative;
+    min-height: 530px;
+    width: 60%;
+    background-color: white;
     border-radius: 5px;
 }
 
@@ -35,28 +26,83 @@
     border: solid black;
     border-radius: 20px;
     margin: 10px;
-    background-color: white;
+    background-color: #eee0e0;
 }
 
 .cart_body {
+    height: 300px;
     text-align: center;
-    padding: 15px;
+    padding: 20px 30px;
     font-size: 200%;
     border: solid black;
     border-radius: 20px;
     margin: 10px;
-    background-color: white;
-    height: 60%;
+    background-color: #eee0e0;
+    min-height: 350px;
+    overflow: auto;
+}
+
+.cart_body-elements{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 15px;
+}
+
+.cart_body-element {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.cart_body-element-main {
+    text-align: start;
+    padding-left: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+img.img-cartbody {
+    width: 10%;
+    height: auto;
+}
+
+.cart_body-element-cost {
+    padding-left: 50px; 
+}
+
+.cart_body-element-btn button {
+    font-size: 100%;
+    padding: 5px 15px;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-top: 15px;
+    align-items: center;
+}
+
+.cart_body-element-btn button:hover {
+    background-color: rgb(204, 45, 61);
+    color: white;
 }
 
 .cart_footer {
     display: flex;
+    justify-content: space-between;
+}
+
+.cart_footer-total {
+    padding-left: 15px;
+    padding-top: 15px;
+    font-size: 120%;
+}
+
+.cart_footer-btn {
+    display: flex;
     float: right;
     margin: 10px 30px 10px 10px;
     padding: 0 0 0 5px;
+    align-content: flex-end;
 }
 
-.cart_footer button {
+.cart_footer-btn button {
     font-size: 200%;
     padding: 5px 15px;
     border-radius: 20px;
