--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 
-.product-title {
+/* .product-title {
     background-color: #f1f1f1;
     color: rgb(69, 67, 67);
     font-size: 200%;
@@ -16,10 +16,35 @@
     box-sizing: border-box;
     padding: 200px 50px; 
     
-}
+} */
 .product-img {
     width:75%;
 }
 .product-img img {
     width: 100%;
+}
+
+.product-title {
+    width: 20%;
+    background-color: rgb(48, 44, 44);
+    color: white;
+    padding: 200px 30px ;
+}
+
+.product_title{
+    border-left: 7px solid var(--primary-color);
+    font-size: 150%;
+    margin: 30px 5px;
+    padding: 10px 0;
+}
+
+
+.product_title h1 {
+    background-color:  var(--primary-color);
+    padding: 5px;
+    
+}
+
+.product_title h2 {
+    padding-left: 5px;
 }
