--- a/src/components/Authen/Login/Login.css
+++ b/src/components/Authen/Login/Login.css
@@ -13,8 +13,8 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
-    background-image: url(https://www.spainculture.us/site/assets/files/6966/balenciaga.-grande.jpg);
+    background-color: rgba(0, 0, 0, 0.4);
+    /* background-image: url(https://www.spainculture.us/site/assets/files/6966/balenciaga.-grande.jpg); */
   
 }
 
@@ -54,14 +54,16 @@
     font-size: 1.6rem;
     font-weight: 400;
     color: var(--primary-color);
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 5px 15px;
     cursor: pointer;
     border: none;
-    
 }
 
 
 .auth__switch-btn:hover {
-    background-color: rgba(0, 0, 0, 0.1)
+    background-color: rgba(0, 0, 0, 0.2)
 }
 
 .auth__input {
