--- a/src/components/Authen/Signin/Signin.css
+++ b/src/components/Authen/Signin/Signin.css
@@ -26,11 +26,12 @@
     color: var(--primary-color);
     cursor: pointer;
     border: none;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 5px 15px;
 }
 
 .auth__switch-btn:hover {
-    background-color: rgba(0, 0, 0, 0.1)
+    background-color: rgba(0, 0, 0, 0.2)
 }
 
 .auth__input {
